log
Wed, Mar 26, 2025  8:24:28 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:41:07 AM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7fa7fea
Wed, Mar 26, 2025  8:44:06 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
6d5a222
Wed, Mar 26, 2025  8:46:11 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
3cd6028
Wed, Mar 26, 2025  8:49:09 AM: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
f6ba146
Wed, Mar 26, 2025  8:52:02 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e86e79f
Wed, Mar 26, 2025  8:52:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4429b7a
Wed, Mar 26, 2025  8:53:25 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c2e6183
Wed, Mar 26, 2025  8:54:16 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
105a75f
Wed, Mar 26, 2025  8:59:50 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
1f66d80
Wed, Mar 26, 2025  9:09:44 AM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7422bb9
Wed, Mar 26, 2025  9:22:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:111:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
94b9e51
Wed, Mar 26, 2025  9:22:17 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
ab6703b
Wed, Mar 26, 2025  9:40:50 AM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
e1a0093
Wed, Mar 26, 2025  9:41:25 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
1b1eb41
Wed, Mar 26, 2025  9:42:53 AM: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
aae858f
Sat, Mar 29, 2025 11:26:19 AM: 
 tests:  9|3
total_score: 35/70
9db951b
Sat, Mar 29, 2025 11:29:49 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
eb5dc76
Sat, Mar 29, 2025 11:51:28 AM: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
bca6432
Sat, Mar 29, 2025 11:52:28 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 55/70
eb133b3
Sat, Mar 29, 2025 11:55:33 AM: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:132:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:123:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c81f533
Sat, Mar 29, 2025 11:55:47 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5551bd2
Sat, Mar 29, 2025 11:56:00 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b6ab8cc
Sat, Mar 29, 2025 11:57:01 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
7956836
Sat, Mar 29, 2025 11:57:44 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3be0d3b
Sat, Mar 29, 2025 11:58:43 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
7edd96e
Sat, Mar 29, 2025 11:58:57 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|0
total_score: 70/70
c38a2af
Sat, Mar 29, 2025 11:59:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
877024a
Sat, Mar 29, 2025 12:00:19 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:146:10: error: variable or field 'data' declared void
     void data = list->current->data;
          ^~~~
list.c:146:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     void data = list->current->data;
                 ^~~~
list.c:149:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return data;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
690343a
